--- a/document.tex
+++ b/document.tex
@@ -38,7 +38,7 @@
 
 	
 \newcommand*\Item[2]{%
-	\sffamily#1 & #2}
+	\sffamily#1\dotfill & #2}
 
 \newcommand*\Desc[1]{%
 	\hspace*{1em}\footnotesize #1}
