--- a/document.tex
+++ b/document.tex
@@ -8,9 +8,11 @@
 
 \fancypagestyle{first}{%
 	\fancyhf{}
-	\headheight 77pt
+	\headheight 132pt
+	\topmargin -64pt
 	\footskip 30pt
-	\fancyhead[C]{\textbf{\Huge Salvo's Coyote Grill}\\\Large 132 W. Center Street, Whitewater, WI\\262-472-0510\\Great for takeout, but give us 20 minutes}
+	\headsep 25pt
+	\fancyhead[C]{\includegraphics[height=1in]{coyote grill logo wide fixed.png}\\\Large 132 W. Center Street, Whitewater, WI\\262-472-0510\\Great for takeout, but give us 20 minutes}
 	\fancyfoot[C]{\large All Sandwiches come with Handful of Chips and Pickel Spear\\Lettuce - Tomato - Onions available upon request}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
@@ -18,11 +20,11 @@
 
 \fancypagestyle{second}{%
 	\fancyhf{}
-	\headheight 30pt
-	\footskip 70pt
-	%\fancyhead[C]{\Huge \textbf{Salvo's Coyote Grill}}
-	
-	\fancyhead[C]{\includegraphics[height=1.5in]{coyote grill logo wide.png}}
+	\headheight 113pt
+	\footskip 50pt
+	\topmargin -64pt
+	\headsep 0pt
+	\fancyhead[C]{\includegraphics[height=1.5in]{coyote grill logo wide fixed.png}}
 	\fancyfoot[C]{\large Daily Lunch Specials\hspace{0.2in}Happy Hour 4-7 daily\hspace{0.2in}Nightly Drink Specials\\Grill Open until 10pm\hspace{0.2in}Fryer Open until 1am\\Undercooked meats can be hazardous to your health}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
