headers look pretty good imo

--- a/document.tex
+++ b/document.tex
@@ -10,10 +10,12 @@
 	\fancyhf{}
 	\headheight 132pt
 	\topmargin -64pt
-	\footskip 30pt
-	\headsep 25pt
+	\footskip 20pt
+	\headsep 10pt
+	\fancyhead[L]{\includegraphics[height=0.75in]{red_chili_pepper.png}}
+	\fancyhead[R]{\includegraphics[height=0.75in]{red_chili_pepper_flipped.png}}
 	\fancyhead[C]{\includegraphics[height=1in]{coyote grill logo wide fixed.png}\\\Large 132 W. Center Street, Whitewater, WI\\262-472-0510\\Great for takeout, but give us 20 minutes}
-	\fancyfoot[C]{\large All Sandwiches come with Handful of Chips and Pickel Spear\\Lettuce - Tomato - Onions available upon request}
+	\fancyfoot[C]{\large Monthly Burger Specials\\All Sandwiches come with Handful of Chips and Pickel Spear\\Lettuce - Tomato - Onions available upon request}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
@@ -23,8 +25,9 @@
 	\headheight 113pt
 	\footskip 50pt
 	\topmargin -64pt
-	\headsep 0pt
-	\fancyhead[C]{\includegraphics[height=1.5in]{coyote grill logo wide fixed.png}}
+	\headsep 5pt
+	\fancyhead[L]{\includegraphics[height=1.25in]{coyote grill logo wide fixed.png}}
+	\fancyhead[R]{\includegraphics[height=1in]{coyote.png}}
 	\fancyfoot[C]{\large Daily Lunch Specials\hspace{0.2in}Happy Hour 4-7 daily\hspace{0.2in}Nightly Drink Specials\\Grill Open until 10pm\hspace{0.2in}Fryer Open until 1am\\Undercooked meats can be hazardous to your health}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
