--- a/document.tex
+++ b/document.tex
@@ -49,7 +49,7 @@
 	\sffamily\textbf{#1}\dotfill & #2}
 
 \newcommand*\Desc[1]{%
-	\sffamily\hspace*{1em}\footnotesize #1}
+	\sffamily\hspace*{1em}\small #1}
 	
 	
 		
