fixed some typos lol

--- a/document.tex
+++ b/document.tex
@@ -15,7 +15,7 @@
 	\fancyhead[L]{\includegraphics[height=0.75in]{red_chili_pepper.png}}
 	\fancyhead[R]{\includegraphics[height=0.75in]{red_chili_pepper_flipped.png}}
 	\fancyhead[C]{\includegraphics[height=1in]{coyote grill logo wide fixed.png}\\\Large 132 W. Center Street, Whitewater, WI\\262-472-0510\\Great for takeout, but give us 20 minutes}
-	\fancyfoot[C]{\large Monthly Burger Specials\\All Sandwiches come with Handful of Chips and Pickel Spear\\Lettuce - Tomato - Onions available upon request}
+	\fancyfoot[C]{\large Monthly Burger Specials\\All Sandwiches come with Handful of Chips and Pickle Spear\\Lettuce - Tomato - Onions available upon request}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
@@ -63,7 +63,7 @@
 		\Item{Ultimate}{7.50} \\
 		\Desc{Served on Grilled Texas Toast, with 4 cheeses, Special Sauce, and Fried Onions} \\
 		\Item{Blazing Britt Burger}{7.50} \\
-		\Desc{Served on Grilled Texas Toast, wtih Pepperjack Cheese, Bacon, Fried Onions, Jalape\~{n}o Bottle Caps, Chipotle BBQ, and Cajun Seasoning} \\
+		\Desc{Served on Grilled Texas Toast, with Pepperjack Cheese, Bacon, Fried Onions, Jalape\~{n}o Bottle Caps, Chipotle BBQ, and Cajun Seasoning} \\
 		\Item{Bacon Cheeseburger}{7.00} \\
 		\Desc{Served on Bakery Roll, with Smoked Bacon and Swiss Cheese} \\
 		\Item{Southwest Burger}{7.00} \\
@@ -75,7 +75,7 @@
 		\Item{Grilled Ranchero Melt}{7.50} \\
 		\Desc{Served on Grilled Texas Toast, with Pepperjack and Swiss Cheese, Peppercorn Ranch, Ham, and Fried Onions} \\
 		\Item{Pile Driver}{7.50} \\
-		\Desc{Served on a Bakery Roll, with Cheedar and Pepperjack Cheese, Stacked Ham, and Fried Onions} \\
+		\Desc{Served on a Bakery Roll, with Cheddar and Pepperjack Cheese, Stacked Ham, and Fried Onions} \\
 	\end{Group}
 	
 	\vfill{}
