Fixed a missing price :(

--- a/document.tex
+++ b/document.tex
@@ -101,7 +101,7 @@
 		\Desc{Served with your choice of cheese} \\
 		\Item{Chicken with No Fixins}{5.25} \\
 		\Desc{For those of you with enough adventure in your life!} \\
-		\Item{Spicy Mesquite Chicken} \\
+		\Item{Spicy Mesquite Chicken}{6.75} \\
 		\Desc{With Bacon, Swiss Cheese, and BBQ Sauce} \\
 		\Item{Spicy Chicken Bacon Ranch}{6.75} \\
 		\Desc{With Bacon, Pepperjack Cheese, and Ranch Dressing} \\
