--- a/document.tex
+++ b/document.tex
@@ -19,7 +19,7 @@
   }
   \pgfpageslogicalpageoptions{1}
   {
-    border code=\pgfsetlinewidth{2pt}\color{brown}\pgfstroke,%
+    border code=\pgfsetlinewidth{4pt}\color{pink}\pgfstroke,%
     border shrink=\pgfpageoptionborder,%
     resized width=.95\pgfphysicalwidth,%
     resized height=.95\pgfphysicalheight,%
@@ -37,8 +37,8 @@
 	\headsep 10pt
 	\fancyhead[L]{\includegraphics[height=0.75in]{red_chili_pepper.png}}
 	\fancyhead[R]{\includegraphics[height=0.75in]{red_chili_pepper_flipped.png}}
-	\fancyhead[C]{\includegraphics[height=1in]{coyote grill logo wide fixed.png}\\\Large 132 W. Center Street, Whitewater, WI\\262-472-0510\\Great for takeout, but give us 20 minutes}
-	\fancyfoot[C]{\large Monthly Burger Specials\\All Sandwiches come with Handful of Chips and Pickle Spear\\Lettuce - Tomato - Onions available upon request}
+	\fancyhead[C]{\includegraphics[height=1in]{coyote grill logo wide fixed.png}\\\Large 132 W. Center Street, Whitewater, WI\\262-472-0510 www.coyotegrill.website\\Great for takeout, but give us 20 minutes}
+	\fancyfoot[C]{\large Monthly Burger Specials\\All sandwiches come with handful of chips and pickle spear\\Lettuce, tomato, and onions available upon request}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
@@ -51,7 +51,7 @@
 	\headsep 5pt
 	\fancyhead[L]{\includegraphics[height=1.25in]{coyote grill logo wide fixed.png}}
 	\fancyhead[R]{\includegraphics[height=1in]{coyote.png}}
-	\fancyfoot[C]{\large Daily Lunch Specials\hspace{0.2in}Happy Hour 4-7 daily\hspace{0.2in}Nightly Drink Specials\\Grill Open until 10pm\hspace{0.2in}Fryer Open until 1am\\Undercooked meats can be hazardous to your health}
+	\fancyfoot[C]{\large Daily lunch specials\hspace{0.2in}Happy Hour 4-7 daily\hspace{0.2in}Nightly drink specials\\Grill open until 10pm\hspace{0.2in}Fryer open until 1am\\Undercooked meats can be hazardous to your health}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
@@ -67,130 +67,125 @@
 		{\fontsize{16}{20}\selectfont\ColText{#1}}\\[0.8em]}
 	{\end{tabular*}}
 
-	
-\newcommand*\Item[2]{%
-	\sffamily\textbf{\large#1}\dotfill & \large#2}
+
+\newcommand*\Item[3]{%
+	\sffamily\textbf{\large#1}\dotfill & {\large#2}\hspace*{0.5cm}{\large#3}}
 
 \newcommand*\Desc[1]{%
 	\sffamily\hspace*{0.5cm}#1}
 
 \begin{document}\thispagestyle{first}
-	
-	\begin{Group}{Salvo Burgers}
-		\Item{Large Salvo Special}{7.00} \\
-		\Desc{Served on a bakery roll, topped with Smoked Ham and Swiss Cheese} \\
-		\Item{Coyote Burger}{7.50} \\
-		\Desc{Served on Grilled Texas Toast, with BBQ Sauce, Onion Ring, Bacon, Pepperjack Cheese} \\
-		\Item{Ultimate}{7.50} \\
-		\Desc{Served on Grilled Texas Toast, with 4 cheeses, Special Sauce, and Fried Onions} \\
-		\Item{Blazing Britt Burger}{7.50} \\
-		\Desc{Served on Grilled Texas Toast, with Pepperjack Cheese, Bacon, Fried Onions, Jalape\~{n}o \\\sffamily\hspace*{0.5cm}Bottle Caps, Chipotle BBQ, and Cajun Seasoning} \\
-		\Item{Bacon Cheeseburger}{7.00} \\
-		\Desc{Served on Bakery Roll, with Smoked Bacon and Swiss Cheese} \\
-		\Item{Southwest Burger}{7.00} \\
-		\Desc{Served on Bakery Roll, with Cajun Spice, Salsa, and Cheddar Cheese} \\
-		\Item{Cheeseburger}{6.00} \\
-		\Desc{Just like the ones served in Paradise} \\
-		\Item{Hamburger}{5.50} \\
+
+	\begin{Group}{Salvo Burgers \& Lil' Debbie Burgers}
+		\Item{Hamburger}{3.50}{5.50} \\
 		\Desc{For you real Americans} \\
-		\Item{Grilled Ranchero Melt}{7.50} \\
-		\Desc{Served on Grilled Texas Toast, with Pepperjack and Swiss Cheese, Peppercorn Ranch, \\\sffamily\hspace*{0.5cm}Ham, and Fried Onions} \\
-		\Item{Pile Driver}{7.50} \\
-		\Desc{Served on a Bakery Roll, with Cheddar and Pepperjack Cheese, Stacked Ham, and Fried \\\sffamily\hspace*{0.5cm}Onions} \\
+		\Item{Cheeseburger}{4.00}{6.00} \\
+		\Desc{Just like the ones served in paradise} \\
+		\Item{Large Salvo Special / Small Lil' Debbie Special}{4.75}{7.00} \\
+		\Desc{On a bakery roll topped with smoked ham and swiss cheese} \\
+		\Item{Bacon Cheeseburger}{4.75}{7.00} \\
+		\Desc{On bakery roll with smoked bacon and swiss cheese} \\
+		\Item{Southwest Burger}{4.50}{7.00} \\
+		\Desc{On bakery roll with cajun spice, salsa, and cheddar cheese} \\
+		\Item{Coyote Burger}{}{7.50} \\
+		\Desc{On grilled texas toast, with BBQ sauce, an onion ring, bacon, pepperjack cheese} \\
+		\Item{Ultimate}{}{7.50} \\
+		\Desc{On grilled texas toast with 4 cheeses, special sauce, and fried onions} \\
+		\Item{Blazing Britt Burger}{}{7.50} \\
+		\Desc{On grilled texas toast with pepperjack cheese, bacon, fried onions, jalape\~{n}o bottle caps, \\\sffamily\hspace*{0.5cm}chipotle BBQ, and cajun seasoning} \\
+		\Item{Grilled Ranchero Melt}{}{7.50} \\
+		\Desc{On grilled texas toast with pepperjack and swiss cheese, peppercorn ranch, ham, and \\\sffamily\hspace*{0.5cm}fried onions} \\
+		\Item{Pile Driver}{}{7.50} \\
+		\Desc{On a bakery roll with cheddar and pepperjack cheese, stacked ham, and fried onions} \\
+		\Item{Breakfast Burger}{}{8.00} \\
+		\Desc{On toast with American cheese, a fried egg, and your choice of ham or bacon} \\
 	\end{Group}
-	
+
 	\vfill{}
-	
-	\begin{Group}{Mini Salvo Burgers}
-		\Item{Small Salvo Special}{4.75} \\
-		\Item{Small Bacon Cheeseburger}{4.75} \\
-		\Item{Small Southwest Burger}{4.50} \\
-		\Item{Small Cheeseburger}{4.00} \\
-		\Item{Small Hamburger}{3.50} \\
+
+	\begin{Group}{Extras}
+		\centering Bacon: 1.00\hspace{0.2in}Egg: 1.00\hspace{0.2in}Texas Toast: 0.50\hspace{0.2in}Cheese: 0.50\hspace{0.2in}Extra Sauce: 0.50\par
 	\end{Group}
-	\\[\baselineskip]
-	\centering Served on a Kaiser Roll \\
-	
+
 	\vfill{}
-	
+
 	\begin{Group}{Chicken Sandwiches}
-		\Item{Chicken Southwest Style}{6.50} \\
-		\Desc{Served on a Kaiser Roll with Cajun Spice, Salsa, and Cheddar} \\
-		\Item{Chicken Cordon Bleu}{6.50} \\
-		\Desc{Served with Smoked Ham and Swiss Cheese} \\
-		\Item{Chicken with Cheese}{5.75} \\
-		\Desc{Served with your choice of cheese} \\
-		\Item{Chicken with No Fixins}{5.25} \\
+		\Item{Chicken with No Fixins}{}{5.25} \\
 		\Desc{For those of you with enough adventure in your life!} \\
-		\Item{Spicy Mesquite Chicken}{6.75} \\
-		\Desc{With Bacon, Swiss Cheese, and BBQ Sauce} \\
-		\Item{Spicy Chicken Bacon Ranch}{6.75} \\
-		\Desc{With Bacon, Pepperjack Cheese, and Ranch Dressing} \\
+		\Item{Chicken with Cheese}{}{5.75} \\
+		\Desc{Served with your choice of cheese} \\
+		\Item{Chicken Southwest Style}{}{6.50} \\
+		\Desc{Served on a Kaiser roll with cajun spice, salsa, and cheddar} \\
+		\Item{Chicken Cordon Bleu}{}{6.50} \\
+		\Desc{Served with smoked ham and swiss cheese} \\
+		\Item{Spicy Mesquite Chicken}{}{6.75} \\
+		\Desc{With bacon, swiss cheese, and BBQ sauce} \\
+		\Item{Spicy Chicken Bacon Ranch}{}{6.75} \\
+		\Desc{With bacon, pepperjack cheese, and ranch dressing} \\
 	\end{Group}
 	\\[\baselineskip]
-	\centering Served on a Kaiser Roll \\
-	
+	\centering Served on a Kaiser roll \\
+
 	\vfill{}
-	
+
 	\begin{Group}{Other Sandwiches}
-		\Item{Pork Chop Sandwich}{5.50} \\
+		\Item{Pork Chop Sandwiches}{}{5.50} \\
 		\Desc{5oz. Butterfly Chop} \\
-		\Item{Fish Sandwich}{5.00} \\
+		\Item{Fish Sandwich}{}{5.00} \\
 		\Desc{2 Fillets of Battered Cod} \\
-		\Item{Steak Sandwich (6oz.)}{9.00} \\
-		\Item{Ham Sandwich}{4.75} \\
+		\Item{Steak Sandwich (6oz.)}{}{10.00} \\
+		\Item{Ham Sandwich}{}{4.75} \\
 		\Desc{Sliced thin and stacked high} \\
-		\Item{Ham and Cheese Sandwich}{5.25} \\
-		\Item{Grilled Cheese}{5.50} \\
-		\Desc{Served on Texas Toast with 4 kinds of cheese} \\
-		\Item{Grilled Cheese with Ham}{7.00} \\
+		\Item{Ham and Cheese Sandwich}{}{5.25} \\
+		\Item{Grilled Cheese}{}{5.50} \\
+		\Desc{Served on texas toast with 4 kinds of cheese} \\
+		\Item{Grilled Cheese with Ham}{}{7.00} \\
+		\Item{Veggie Burger}{}{8.00} \\
+		\Desc{TODO}
 	\end{Group}
-	
+
 	\vfill{}
-	
+
 	\begin{Group}{From the Fryer}
-		\Item{Chicken Strips (4 tender breast strips)}{6.00} \\
-		\Item{Chicken Drummies (5 large chicken wings)}{6.00} \\
-		\Item{Hot Wings (6 spicy wings)}{6.00} \\
-		\Item{Battered Mushrooms}{4.00} \\
-		\Item{Steak Cut Onion Rings}{4.00} \\
-		\Item{Cheese Curds}{4.00} \\
-		\Item{Mozzarella Sticks}{4.00} \\
-		\Item{Steak Cut Fries}{3.00} \\
-		\Item{Freedom Fries (Plain or ranch seasoned)}{2.50} \\
-		\Item{Mini Tacos (10 mini tacos with salsa and sour cream)}{4.00} \\
-		\Item{Broccoli Cheddar Bites}{4.50} \\
-		\Item{Mini Corndogs}{4.00} \\
-		\Item{Sweet Corn Nuggets}{4.00} \\
-		\Item{Jalepe\~{n}o Bottlecaps}{4.00} \\
-		\Item{Combo Basket}{5.00} \\
+		\Item{French Fries {\small Plain or ranch seasoned}}{}{2.50} \\
+		\Item{Steak Cut Fries}{}{3.00} \\
+		\Item{Dank Fries}{}{3.00} \\
+		\Desc{Fries sprinkled with cajun and ranch seasoning, drizzled with ranch dressing} \\
+		\Item{Battered Mushrooms}{}{4.00} \\
+		\Item{Steak Cut Onion Rings}{}{4.00} \\
+		\Item{Cheese Curds}{}{4.00} \\
+		\Item{Mozzarella Sticks}{}{4.00} \\
+		\Item{Mini Tacos {\small (10 mini tacos with salsa and sour cream)}}{}{4.00} \\
+		\Item{Mini Corndogs}{}{4.00} \\
+		\Item{Sweet Corn Nuggets}{}{4.00} \\
+		\Item{Jalepe\~{n}o Bottlecaps}{}{4.00} \\
+		\Item{Broccoli Cheddar Bites}{}{4.50} \\
+		\Item{Combo Basket}{}{5.00} \\
 		\Desc{Broccoli cheddar bites, jalape\~{n}o bottlecaps, sweet corn nuggets, mini corndogs, cheese \\\sffamily\hspace*{0.5cm}curds, onion rings, and fries} \\
+		\Item{Chicken Strips {\small 4 tender breast strips}}{}{6.00} \\
+		\Item{Chicken Drummies {\small 5 large chicken wings}}{}{6.00} \\
+		\Item{Hot Wings {\small 6 spicy wings}}{}{6.00} \\
 	\end{Group}
-	
+
 	\vfill{}
-	
+
 	\begin{Group}{Baskets}
-		\Item{Fish Basket}{7.50} \\
-		\Desc{3 pieces of Battered Cod, fries, and tartar sauce} \\
-		\Item{Chicken Strip Basket}{7.50} \\
+		\Item{Fish Basket}{}{7.50} \\
+		\Desc{3 pieces of battered cod, fries, and tartar sauce} \\
+		\Item{Chicken Strip Basket}{}{7.50} \\
 		\Desc{4 pieces of crispy chicken strips and fries} \\
 	\end{Group}
 	\\[\baselineskip]
 	\centering Baskets include coleslaw and marble rye bread \\
-	
+
 	\vfill{}
-	
+
 	\begin{Group}{Soup}
-		\Item{Soup of the Day}{Cup 2.00\hspace{0.2in}Bowl 3.00} \\
-		\Item{Chili (in season)}{3.00} \\
-		\Item{Chili Deluxe}{4.00} \\
+		\Item{Soup of the Day}{Cup 2.00}{Bowl 3.00} \\
+		\Item{Chili (in season)}{}{3.00} \\
+		\Item{Chili Deluxe}{}{4.00} \\
 		\Desc{Shredded cheese, sour cream, and chopped onions} \\
 	\end{Group}
-	
+
 	\vfill{}
-	
-	\begin{Group}{Extras}
-	\end{Group}
-	\centering Bacon: 1.00\hspace{0.2in}Egg: 1.00\hspace{0.2in}Texas Toast: 0.50\hspace{0.2in}Cheese: 0.50\hspace{0.2in}Extra Sauce: 0.50\par
-	
 \end{document}
